--- a/app/src/main/res/layout/fragment_albums_detail.xml
+++ b/app/src/main/res/layout/fragment_albums_detail.xml
@@ -1,45 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="50dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#343F4B"
+    android:orientation="vertical"
     tools:context=".fragment_albums_detail">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="102dp"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/iVCoverAlbum"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        app:srcCompat="@android:drawable/ic_menu_slideshow" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textAlbumName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:text="info album"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+        android:layout_gravity="center_horizontal"
+        tools:text="NOMBRE DEL ALBUM"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/white"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="217dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="50dp"
-        android:text="Description"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/teal_700"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:text="Description :"
+                tools:text="Description : " />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="230dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="50dp"
-        android:text="info description"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+            <TextView
+                android:id="@+id/textAlbumDescription"
+                android:layout_width="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginStart="50dp"
+                android:layout_height="wrap_content"
+                tools:text="info description"
+                android:textColor="@color/white" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/textGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/teal_700"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:text="Genre :"
+                tools:text="Genre : " />
+
+            <TextView
+                android:id="@+id/textAlbumGenre"
+                android:layout_width="wrap_content"
+                android:textSize="25sp"
+                android:layout_height="wrap_content"
+                tools:text="info genre"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textRecordLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/teal_700"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:text="Record Label : "
+                tools:text="Record Label : " />
+
+            <TextView
+                android:id="@+id/textAlbumRecordLabel"
+                android:layout_width="wrap_content"
+                android:textSize="25sp"
+                android:layout_height="wrap_content"
+                tools:text="info recordLabel"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/teal_700"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:text="Release Date : "
+                tools:text="Release Date : " />
+
+            <TextView
+                android:id="@+id/textAlbumReleaseDate"
+                android:layout_width="wrap_content"
+                android:textSize="25sp"
+                android:layout_height="wrap_content"
+                tools:text="info ReleaseDate"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
