--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -11,17 +11,26 @@
         android:layout_marginTop="16dp"
         android:background="#343F4B"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/textTrackName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@{track.name}"
-            android:hint="fragmento track album" />
-        <TextView
-            android:id="@+id/textTrackDuration"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@{track.duration}"
-            android:hint="Duration" />
+            android:layout_height="16dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textTrackName"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:hint="fragmento track album"
+                android:text="@{track.name}"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textTrackDuration"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:hint="Duration"
+                android:text="@{track.duration}"
+                android:textColor="@color/white" />
+        </LinearLayout>
     </LinearLayout>
 </layout>
